# buxis

./: .clang-format  CMakeLists.txt  LICENSE  README.md  vcpkg.json
R/model_foo/: model_foo.R
flatbufs_demo/: CMakeLists.txt
flatbufs_demo/flatbufs_demo/: CMakeLists.txt  main.cpp  schema.fbs  schema_generated.h
func_call_performance/: CMakeLists.txt  README.md
func_call_performance/func_call_performance/: CMakeLists.txt  main.cpp
iprof/: CMakeLists.txt
iprof/iprof/: CMakeLists.txt
work_cache_size/: CMakeLists.txt
work_cache_size/work_cache_size/: CMakeLists.txt  work_cache_size_main.cpp
